Change environment variable names

--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,49 @@
 #
-# VaDock
+# DOCKER
 #
 
-VADOCK_ID=vdk
-VADOCK_HOST_PATH=/vadock
-VADOCK_GUEST_PATH=/host/vadock
-VADOCK_HOST_WWW_PATH=/www
-VADOCK_GUEST_WWW_PATH=/host/www
+VDK_DOCKER_ID=vdk
+VDK_DOCKER_HOST_PATH=/vadock
+VDK_DOCKER_GUEST_PATH=/host/vadock
+VDK_DOCKER_HOST_WWW_PATH=/www
+VDK_DOCKER_GUEST_WWW_PATH=/host/www
 
 #
 # NGINX
 #
 
-VADOCK_NGINX_IMAGE_NAME=${VADOCK_ID}_nginx
-VADOCK_NGINX_IMAGE_PATH=docker/images/nginx
-VADOCK_NGINX_NETWORK_NAME=${VADOCK_ID}_net
-VADOCK_NGINX_NETWORK_EXTERNAL=false
-VADOCK_NGINX_PORT=80
+VDK_NGINX_IMAGE_NAME=vdk_nginx
+VDK_NGINX_IMAGE_PATH=docker/images/nginx
+VDK_NGINX_NETWORK_NAME=vdk_net
+VDK_NGINX_NETWORK_EXTERNAL=false
+VDK_NGINX_PORT=80
 
 #
 # PHP
 #
 
-VADOCK_PHP70_IMAGE_NAME=php70
-VADOCK_PHP70_IMAGE_PATH=docker/images/php70
-VADOCK_PHP70_VERSION_SUFFIX=70
-VADOCK_PHP70_NETWORK_NAME=${VADOCK_ID}_net
-VADOCK_PHP70_NETWORK_EXTERNAL=true
+VDK_PHP70_IMAGE_NAME=php70
+VDK_PHP70_IMAGE_PATH=docker/images/php70
+VDK_PHP70_VERSION_SUFFIX=70
+VDK_PHP70_NETWORK_NAME=vdk_net
+VDK_PHP70_NETWORK_EXTERNAL=true
 
-VADOCK_PHP71_IMAGE_NAME=php71
-VADOCK_PHP71_IMAGE_PATH=docker/images/php71
-VADOCK_PHP71_VERSION_SUFFIX=71
-VADOCK_PHP71_NETWORK_NAME=${VADOCK_ID}_net
-VADOCK_PHP71_NETWORK_EXTERNAL=true
+VDK_PHP71_IMAGE_NAME=php71
+VDK_PHP71_IMAGE_PATH=docker/images/php71
+VDK_PHP71_VERSION_SUFFIX=71
+VDK_PHP71_NETWORK_NAME=vdk_net
+VDK_PHP71_NETWORK_EXTERNAL=true
 
 #
 # DB
 #
 
-VADOCK_MYSQL_IMAGE_NAME=${VADOCK_ID}_mysql
-VADOCK_MYSQL_IMAGE_PATH=docker/images/mysql
-VADOCK_MYSQL_NETWORK_NAME=${VADOCK_ID}_net
-VADOCK_MYSQL_NETWORK_EXTERNAL=true
-VADOCK_MYSQL_PORT=127.0.0.1:3306
-#VADOCK_MYSQL_PORT=3306 #Shared port
+VDK_MYSQL_IMAGE_NAME=vdk_mysql
+VDK_MYSQL_IMAGE_PATH=docker/images/mysql
+VDK_MYSQL_NETWORK_NAME=vdk_net
+VDK_MYSQL_NETWORK_EXTERNAL=true
+VDK_MYSQL_PORT=127.0.0.1:3306
+#VDK_MYSQL_PORT=3306 #Shared port
 
 MYSQL_ROOT_PASSWORD=root
 
@@ -51,11 +51,11 @@ MYSQL_ROOT_PASSWORD=root
 # PHP My Admin
 #
 
-VADOCK_PMA_IMAGE_NAME=${VADOCK_ID}_pma
-VADOCK_PMA_IMAGE_PATH=docker/images/pma
-VADOCK_PMA_NETWORK_NAME=${VADOCK_ID}_net
-VADOCK_PMA_NETWORK_EXTERNAL=true
-VADOCK_PMA_PORT=8080
+VDK_PMA_IMAGE_NAME=vdk_pma
+VDK_PMA_IMAGE_PATH=docker/images/pma
+VDK_PMA_NETWORK_NAME=vdk_net
+VDK_PMA_NETWORK_EXTERNAL=true
+VDK_PMA_PORT=8080
 
-PMA_HOST=${VADOCK_ID}_pma
+PMA_HOST=vdk_pma
 PMA_PORT=3306
