--- a/vagrant.example.yml
+++ b/vagrant.example.yml
@@ -27,8 +27,11 @@ memory: 2048
 # Memory locked for ElasticSearch
 es_memory: 512m
 
+# HOST MySQL Port
+host_mysql_port: 3307
+
 # HOST WWW-path
-www_path: ./../
+host_www_path: ./../
 
 # Domains aliases
 domains:
