Added zip and unzip packages to Dockerfile for PHP 7.0 and PHP 7.1

--- a/docker/images/php71/Dockerfile
+++ b/docker/images/php71/Dockerfile
@@ -31,6 +31,8 @@ RUN apt-get update && apt-get install -y \
         curl \
         wget \
         git \
+        zip \
+        unzip \
         zlib1g-dev \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
