--- a/docker/images/php70/Dockerfile
+++ b/docker/images/php70/Dockerfile
@@ -4,23 +4,23 @@ FROM php:7.0-fpm
 # Доступные имена расширений PHP
 # Possible values for ext-name:
 #
-# bcmath bz2 
-# calendar ctype curl 
-# dba dom enchant 
-# exif 
-# fileinfo filter ftp 
-# gd gettext gmp hash 
-# iconv imap interbase intl 
-# json 
-# ldap 
-# mbstring mcrypt mysqli 
-# oci8 odbc opcache 
-# pcntl pdo pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlite pgsql phar posix pspell 
-# readline recode reflection 
-# session shmop simplexml snmp soap sockets spl standard sysvmsg sysvsem sysvshm 
-# tidy tokenizer 
-# wddx 
-# xml xmlreader xmlrpc xmlwriter xsl 
+# bcmath bz2
+# calendar ctype curl
+# dba dom enchant
+# exif
+# fileinfo filter ftp
+# gd gettext gmp hash
+# iconv imap interbase intl
+# json
+# ldap
+# mbstring mcrypt mysqli
+# oci8 odbc opcache
+# pcntl pdo pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlite pgsql phar posix pspell
+# readline recode reflection
+# session shmop simplexml snmp soap sockets spl standard sysvmsg sysvsem sysvshm
+# tidy tokenizer
+# wddx
+# xml xmlreader xmlrpc xmlwriter xsl
 # zip
 
 # RUN выполняет идущую за ней команду в контексте нашего образа.
@@ -31,6 +31,8 @@ RUN apt-get update && apt-get install -y \
         curl \
         wget \
         git \
+        zip \
+        unzip \
         zlib1g-dev \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
@@ -43,7 +45,7 @@ RUN apt-get update && apt-get install -y \
 		&& docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
-	
+
 #RUN apt-get update && apt-get install -y \
 #		curl \
 #		wget \
