Change mysql name to mariadb and change bin structures

--- a/.env.example
+++ b/.env.example
@@ -38,12 +38,12 @@ VDK_PHP71_NETWORK_EXTERNAL=true
 # DB
 #
 
-VDK_MYSQL_IMAGE_NAME=vdk_mysql
-VDK_MYSQL_IMAGE_PATH=docker/images/mysql
-VDK_MYSQL_NETWORK_NAME=vdk_net
-VDK_MYSQL_NETWORK_EXTERNAL=true
-VDK_MYSQL_PORT=127.0.0.1:3306
-#VDK_MYSQL_PORT=3306 #Shared port
+VDK_MARIADB_IMAGE_NAME=vdk_mysql
+VDK_MARIADB_IMAGE_PATH=docker/images/mysql
+VDK_MARIADB_NETWORK_NAME=vdk_net
+VDK_MARIADB_NETWORK_EXTERNAL=true
+VDK_MARIADB_PORT=127.0.0.1:3306
+#VDK_MARIADB_PORT=3306 #Shared port
 
 MYSQL_ROOT_PASSWORD=root
 
