--- a/docker/images/php70/Dockerfile
+++ b/docker/images/php70/Dockerfile
@@ -41,8 +41,10 @@ RUN apt-get update && apt-get install -y \
 				libicu-dev \
         mysql-client \
     && docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
-		&& docker-php-ext-configure intl \
-		&& docker-php-ext-install intl \
+    && docker-php-ext-configure opcache --enable-opcache \
+    && docker-php-ext-install opcache
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
 
