--- a/docker/images/php71/Dockerfile
+++ b/docker/images/php71/Dockerfile
@@ -42,7 +42,7 @@ RUN apt-get update && apt-get install -y \
         mysql-client \
     && docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
     && docker-php-ext-configure opcache --enable-opcache \
-    && docker-php-ext-install opcache
+    && docker-php-ext-install opcache \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
