Added php 7.2, added "docker_compose" directive to vagrant.yml (config) and some fixes

--- a/docker-compose.mariadb.yml
+++ b/docker-compose.mariadb.yml
@@ -9,7 +9,7 @@ services:
     mariadb:
         image: ${VDK_MARIADB_IMAGE_NAME}
         build: ${VDK_MARIADB_IMAGE_PATH}
-        container_name: ${VDK_DOCKER_ID}_mariadb
+        container_name: ${VDK_DOCKER_ID}_${VDK_MARIADB_IMAGE_NAME}
         env_file:
             - ./.env
         networks:
