--- a/docker-compose.php56.yml
+++ b/docker-compose.php56.yml
@@ -9,7 +9,8 @@ services:
     php70:
         image: ${VDK_PHP56_IMAGE_NAME}
         build: ${VDK_PHP56_IMAGE_PATH}
-        container_name: ${VDK_DOCKER_ID}_php56
+        container_name: ${VDK_DOCKER_ID}_${VDK_PHP56_IMAGE_NAME}
+        command: faketime -f ${VDK_DOCKER_FAKETIME} php-fpm
         user: www-data
         networks:
             - default
