--- a/docker-compose.php71.yml
+++ b/docker-compose.php71.yml
@@ -9,7 +9,8 @@ services:
     php71:
         image: ${VDK_PHP71_IMAGE_NAME}
         build: ${VDK_PHP71_IMAGE_PATH}
-        container_name: ${VDK_DOCKER_ID}_php71
+        container_name: ${VDK_DOCKER_ID}_${VDK_PHP71_IMAGE_NAME}
+        command: faketime -f ${VDK_DOCKER_FAKETIME} php-fpm
         user: www-data
         networks:
             - default
