--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -1,5 +1,5 @@
 # Для начала указываем исходный образ, он будет использован как основа
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 
 # Доступные имена расширений PHP
 # Possible values for ext-name:
@@ -40,8 +40,7 @@ RUN apt-get update && apt-get install -y \
         libpng-dev \
         libicu-dev \
         mysql-client \
-        faketime \
-    && docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
+    && docker-php-ext-install -j$(nproc) exif bcmath iconv mbstring mysqli pdo_mysql zip \
     && docker-php-ext-configure opcache --enable-opcache \
     && docker-php-ext-install opcache \
     && docker-php-ext-configure intl \
