--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,16 @@ VDK_DOCKER_GUEST_PATH=/host/vadock
 VDK_DOCKER_HOST_WWW_PATH=/www
 VDK_DOCKER_GUEST_WWW_PATH=/host/www
 
+# Set fake date for PHP, MariaDB
+# Example (Y-m-d H:i:s): "@2020-01-20 23:59:50"
+
+VDK_DOCKER_FAKETIME="+1s"
+
 #
 # NGINX
 #
 
-VDK_NGINX_IMAGE_NAME=vdk_nginx
+VDK_NGINX_IMAGE_NAME=nginx
 VDK_NGINX_IMAGE_PATH=docker/images/nginx
 VDK_NGINX_NETWORK_NAME=vdk_net
 VDK_NGINX_NETWORK_EXTERNAL=false
@@ -22,29 +27,31 @@ VDK_NGINX_PORT=80
 # PHP
 #
 
-VDK_PHP70_IMAGE_NAME=php56
-VDK_PHP70_IMAGE_PATH=docker/images/php56
-VDK_PHP70_VERSION_SUFFIX=56
-VDK_PHP70_NETWORK_NAME=vdk_net
-VDK_PHP70_NETWORK_EXTERNAL=true
+VDK_PHP56_IMAGE_NAME=php56
+VDK_PHP56_IMAGE_PATH=docker/images/php56
+VDK_PHP56_NETWORK_NAME=vdk_net
+VDK_PHP56_NETWORK_EXTERNAL=true
 
 VDK_PHP70_IMAGE_NAME=php70
 VDK_PHP70_IMAGE_PATH=docker/images/php70
-VDK_PHP70_VERSION_SUFFIX=70
 VDK_PHP70_NETWORK_NAME=vdk_net
 VDK_PHP70_NETWORK_EXTERNAL=true
 
 VDK_PHP71_IMAGE_NAME=php71
 VDK_PHP71_IMAGE_PATH=docker/images/php71
-VDK_PHP71_VERSION_SUFFIX=71
 VDK_PHP71_NETWORK_NAME=vdk_net
 VDK_PHP71_NETWORK_EXTERNAL=true
+
+VDK_PHP72_IMAGE_NAME=php72
+VDK_PHP72_IMAGE_PATH=docker/images/php72
+VDK_PHP72_NETWORK_NAME=vdk_net
+VDK_PHP72_NETWORK_EXTERNAL=true
 
 #
 # DB
 #
 
-VDK_MARIADB_IMAGE_NAME=vdk_mariadb
+VDK_MARIADB_IMAGE_NAME=mariadb
 VDK_MARIADB_IMAGE_PATH=docker/images/mariadb
 VDK_MARIADB_NETWORK_NAME=vdk_net
 VDK_MARIADB_NETWORK_EXTERNAL=true
@@ -57,7 +64,7 @@ MYSQL_ROOT_PASSWORD=root
 # PHP My Admin
 #
 
-VDK_PMA_IMAGE_NAME=vdk_pma
+VDK_PMA_IMAGE_NAME=pma
 VDK_PMA_IMAGE_PATH=docker/images/pma
 VDK_PMA_NETWORK_NAME=vdk_net
 VDK_PMA_NETWORK_EXTERNAL=true
