--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -40,6 +40,7 @@ RUN apt-get update && apt-get install -y \
         libpng-dev \
         libicu-dev \
         mysql-client \
+        faketime \
     && docker-php-ext-install -j$(nproc) exif bcmath iconv mbstring mysqli pdo_mysql zip \
     && docker-php-ext-configure opcache --enable-opcache \
     && docker-php-ext-install opcache \
