--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -83,11 +83,11 @@ WORKDIR /host
 
 # FIX проблемы с правами (для запуска через docker exec)
 RUN usermod --non-unique --uid 1000 www-data \
-  && groupmod --non-unique --gid 1000 www-data \
-  && chown -R www-data:www-data /var/www \
-  && chown -R www-data:www-data /host
+    && groupmod --non-unique --gid 1000 www-data \
+    && chown -R www-data:www-data /var/www \
+    && chown -R www-data:www-data /host
 
 # Запускаем контейнер
 # Из документации: The main purpose of a CMD is to provide defaults for an executing container. These defaults can include an executable,
 # or they can omit the executable, in which case you must specify an ENTRYPOINT instruction as well.
-CMD ["php-fpm"]
+CMD []
