--- a/docker/images/php71/Dockerfile
+++ b/docker/images/php71/Dockerfile
@@ -76,7 +76,7 @@ RUN apt-get update && apt-get install -y \
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Добавим свой php.ini, можем в нем определять свои значения конфига
-ADD php.ini /usr/local/etc/php/conf.d/40-custom.ini
+ADD conf.d/*.ini /usr/local/etc/php/conf.d/
 
 # Указываем рабочую директорию для PHP
 WORKDIR /host
