--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,13 @@ VDK_MARIADB_NETWORK_EXTERNAL=true
 VDK_MARIADB_PORT=127.0.0.1:3306
 #VDK_MARIADB_PORT=3306 #Shared port
 
+VDK_MYSQL_IMAGE_NAME=mysql
+VDK_MYSQL_IMAGE_PATH=docker/images/mysql
+VDK_MYSQL_NETWORK_NAME=vdk_net
+VDK_MYSQL_NETWORK_EXTERNAL=true
+VDK_MYSQL_PORT=127.0.0.1:3306
+#VDK_MYSQL_PORT=3306 #Shared port
+
 MYSQL_ROOT_PASSWORD=root
 
 #
