Added version config from nginx,mysql,mariadb

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ VDK_DOCKER_FAKETIME="+1s"
 #
 
 VDK_NGINX_IMAGE_NAME=nginx
+VDK_NGINX_IMAGE_VERSION=latest
 VDK_NGINX_IMAGE_PATH=docker/images/nginx
 VDK_NGINX_NETWORK_NAME=vdk_net
 VDK_NGINX_NETWORK_EXTERNAL=false
@@ -52,6 +53,7 @@ VDK_PHP72_NETWORK_EXTERNAL=true
 #
 
 VDK_MARIADB_IMAGE_NAME=mariadb
+VDK_MARIADB_IMAGE_VERSION=latest
 VDK_MARIADB_IMAGE_PATH=docker/images/mariadb
 VDK_MARIADB_NETWORK_NAME=vdk_net
 VDK_MARIADB_NETWORK_EXTERNAL=true
@@ -59,6 +61,7 @@ VDK_MARIADB_PORT=127.0.0.1:3306
 #VDK_MARIADB_PORT=3306 #Shared port
 
 VDK_MYSQL_IMAGE_NAME=mysql
+VDK_MYSQL_IMAGE_VERSION=latest
 VDK_MYSQL_IMAGE_PATH=docker/images/mysql
 VDK_MYSQL_NETWORK_NAME=vdk_net
 VDK_MYSQL_NETWORK_EXTERNAL=true
