--- a/docker/images/mariadb/Dockerfile
+++ b/docker/images/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 # Для начала указываем исходный образ, он будет использован как основа
-FROM mariadb:10.2.15
+FROM mariadb
 
 COPY mariadb.conf.d/* /etc/mysql/mariadb.conf.d/
 COPY conf.d/* /etc/mysql/conf.d/
