--- a/docker/images/php56/Dockerfile
+++ b/docker/images/php56/Dockerfile
@@ -49,6 +49,9 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
 
+# Install APCu
+RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
+
 #RUN apt-get update && apt-get install -y \
 #		curl \
 #		wget \
