--- a/docker/images/php71/Dockerfile
+++ b/docker/images/php71/Dockerfile
@@ -48,7 +48,10 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
-	
+
+# Install APCu
+RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
+
 #RUN apt-get update && apt-get install -y \
 #		curl \
 #		wget \
