--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -27,6 +27,7 @@ FROM php:7.2-fpm
 # В данном случае мы установим некоторые зависимости и модули PHP.
 # Для установки модулей используем команду docker-php-ext-install.
 # На каждый RUN создается новый слой в образе, поэтому рекомендуется объединять команды.
+
 RUN apt-get update && apt-get install -y \
         curl \
         wget \
@@ -48,6 +49,9 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
+
+# Install APCu
+RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
 	
 #RUN apt-get update && apt-get install -y \
 #		curl \
