Changed the location of files /bin --> /docker/bin /docker/bin --> /docker/export /docker-compose.*.yml --> /docker/compose/*.yml

--- a/.env.example
+++ b/.env.example
@@ -14,14 +14,18 @@ VDK_DOCKER_GUEST_WWW_PATH=/host/www
 VDK_DOCKER_FAKETIME="+1s"
 
 #
+# NETWORK
+#
+
+VDK_NETWORK_NAME=vdk_net
+
+#
 # NGINX
 #
 
 VDK_NGINX_IMAGE_NAME=nginx
 VDK_NGINX_IMAGE_VERSION=latest
-VDK_NGINX_IMAGE_PATH=docker/images/nginx
-VDK_NGINX_NETWORK_NAME=vdk_net
-VDK_NGINX_NETWORK_EXTERNAL=false
+VDK_NGINX_IMAGE_PATH=./../images/nginx
 VDK_NGINX_PORT=80
 
 #
@@ -29,44 +33,32 @@ VDK_NGINX_PORT=80
 #
 
 VDK_PHP56_IMAGE_NAME=php56
-VDK_PHP56_IMAGE_PATH=docker/images/php56
-VDK_PHP56_NETWORK_NAME=vdk_net
-VDK_PHP56_NETWORK_EXTERNAL=true
+VDK_PHP56_IMAGE_PATH=./../images/php56
 
 VDK_PHP70_IMAGE_NAME=php70
-VDK_PHP70_IMAGE_PATH=docker/images/php70
-VDK_PHP70_NETWORK_NAME=vdk_net
-VDK_PHP70_NETWORK_EXTERNAL=true
+VDK_PHP70_IMAGE_PATH=./../images/php70
 
 VDK_PHP71_IMAGE_NAME=php71
-VDK_PHP71_IMAGE_PATH=docker/images/php71
-VDK_PHP71_NETWORK_NAME=vdk_net
-VDK_PHP71_NETWORK_EXTERNAL=true
+VDK_PHP71_IMAGE_PATH=./../images/php71
 
 VDK_PHP72_IMAGE_NAME=php72
-VDK_PHP72_IMAGE_PATH=docker/images/php72
-VDK_PHP72_NETWORK_NAME=vdk_net
-VDK_PHP72_NETWORK_EXTERNAL=true
+VDK_PHP72_IMAGE_PATH=./../images/php72
 
 #
 # DB
 #
 
-VDK_MARIADB_IMAGE_NAME=mariadb
-VDK_MARIADB_IMAGE_VERSION=latest
-VDK_MARIADB_IMAGE_PATH=docker/images/mariadb
-VDK_MARIADB_NETWORK_NAME=vdk_net
-VDK_MARIADB_NETWORK_EXTERNAL=true
-VDK_MARIADB_PORT=127.0.0.1:3306
-#VDK_MARIADB_PORT=3306 #Shared port
-
 VDK_MYSQL_IMAGE_NAME=mysql
 VDK_MYSQL_IMAGE_VERSION=latest
-VDK_MYSQL_IMAGE_PATH=docker/images/mysql
-VDK_MYSQL_NETWORK_NAME=vdk_net
-VDK_MYSQL_NETWORK_EXTERNAL=true
+VDK_MYSQL_IMAGE_PATH=./../images/mysql
 VDK_MYSQL_PORT=127.0.0.1:3306
 #VDK_MYSQL_PORT=3306 #Shared port
+
+VDK_MARIADB_IMAGE_NAME=mariadb
+VDK_MARIADB_IMAGE_VERSION=latest
+VDK_MARIADB_IMAGE_PATH=./../images/mariadb
+VDK_MARIADB_PORT=127.0.0.1:3307
+#VDK_MARIADB_PORT=3307 #Shared port
 
 MYSQL_ROOT_PASSWORD=root
 
@@ -75,9 +67,7 @@ MYSQL_ROOT_PASSWORD=root
 #
 
 VDK_PMA_IMAGE_NAME=pma
-VDK_PMA_IMAGE_PATH=docker/images/pma
-VDK_PMA_NETWORK_NAME=vdk_net
-VDK_PMA_NETWORK_EXTERNAL=true
+VDK_PMA_IMAGE_PATH=./../images/pma
 VDK_PMA_PORT=8080
 
 PMA_HOST=vdk_pma
