--- a/docker/compose/php72.yml
+++ b/docker/compose/php72.yml
@@ -8,7 +8,11 @@ networks:
 services:
     PHP72:
         image: ${VDK_PHP72_IMAGE_NAME}
-        build: ${VDK_PHP72_IMAGE_PATH}
+        build:
+            context: ${VDK_PHP72_IMAGE_PATH}
+            args:
+                - version=${VDK_PHP72_IMAGE_VERSION}
+                
         container_name: ${VDK_DOCKER_ID}_${VDK_PHP72_IMAGE_NAME}
         command: faketime -f ${VDK_DOCKER_FAKETIME} php-fpm
         user: www-data
