--- a/docker/images/php70/Dockerfile
+++ b/docker/images/php70/Dockerfile
@@ -42,6 +42,7 @@ RUN apt-get update && apt-get install -y \
         libpng-dev \
         libicu-dev \
         mysql-client \
+        sshpass \
         faketime \
     && docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
     && docker-php-ext-configure opcache --enable-opcache \
