Split RUN command in php* Dockerfile

--- a/docker/images/php70/Dockerfile
+++ b/docker/images/php70/Dockerfile
@@ -43,8 +43,9 @@ RUN apt-get update && apt-get install -y \
         libicu-dev \
         mysql-client \
         sshpass \
-        faketime \
-    && docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
+        faketime
+
+RUN docker-php-ext-install -j$(nproc) iconv mcrypt mbstring mysqli pdo_mysql zip \
     && docker-php-ext-configure opcache --enable-opcache \
     && docker-php-ext-install opcache \
     && docker-php-ext-configure intl \
