--- a/docker/images/mariadb/Dockerfile
+++ b/docker/images/mariadb/Dockerfile
@@ -7,8 +7,10 @@ COPY conf.d/* /etc/mysql/conf.d/
 RUN chmod -R 644 /etc/mysql/mariadb.conf.d
 RUN chmod -R 644 /etc/mysql/conf.d
 
+RUN apt-get update && apt-get install -y faketime
+
 WORKDIR /host
 
 # Костыль с указанием кодировки (через конфиги данное значение не задаётся)
-CMD ["--character-set-server=utf8", "--collation-server=utf8_general_ci"]
+CMD []
 
