Disable php72 apcu

--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -47,8 +47,8 @@ RUN apt-get update && apt-get install -y \
         faketime
 
 RUN docker-php-ext-install -j$(nproc) exif bcmath iconv mbstring mysqli pdo_mysql zip \
-    && docker-php-ext-configure opcache --enable-opcache \
-    && docker-php-ext-install opcache \
+#    && docker-php-ext-configure opcache --enable-opcache \
+#    && docker-php-ext-install opcache \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
