--- a/docker/compose/nginx.yml
+++ b/docker/compose/nginx.yml
@@ -12,10 +12,10 @@ services:
             context: ${VDK_NGINX_IMAGE_PATH}
             args:
                 - version=${VDK_NGINX_IMAGE_VERSION}
-
         container_name: ${VDK_DOCKER_ID}_${VDK_NGINX_IMAGE_NAME}
         ports:
             - ${VDK_NGINX_PORT}:80
+        network_mode: host
         networks:
             - default
         env_file:
