--- a/docker/images/php72/Dockerfile
+++ b/docker/images/php72/Dockerfile
@@ -47,15 +47,15 @@ RUN apt-get update && apt-get install -y \
         faketime
 
 RUN docker-php-ext-install -j$(nproc) exif bcmath iconv mbstring mysqli pdo_mysql zip \
-#    && docker-php-ext-configure opcache --enable-opcache \
-#    && docker-php-ext-install opcache \
+    && docker-php-ext-configure opcache --enable-opcache \
+    && docker-php-ext-install opcache \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
 
 # Install APCu
-#RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
+RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
 
 # Куда же без composer'а.
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
