Fix PHP and NGINX networking for improvement speed

--- a/.env.example
+++ b/.env.example
@@ -35,18 +35,22 @@ VDK_NGINX_PORT=80
 VDK_PHP56_IMAGE_NAME=php56
 VDK_PHP56_IMAGE_VERSION=5.6-fpm
 VDK_PHP56_IMAGE_PATH=./../images/php56
+VDK_PHP56_PORT=127.0.0.1:9056
 
 VDK_PHP70_IMAGE_NAME=php70
 VDK_PHP70_IMAGE_VERSION=7.0-fpm
 VDK_PHP70_IMAGE_PATH=./../images/php70
+VDK_PHP70_PORT=127.0.0.1:9070
 
 VDK_PHP71_IMAGE_NAME=php71
 VDK_PHP71_IMAGE_VERSION=7.1-fpm
 VDK_PHP71_IMAGE_PATH=./../images/php71
+VDK_PHP71_PORT=127.0.0.1:9071
 
 VDK_PHP72_IMAGE_NAME=php72
 VDK_PHP72_IMAGE_VERSION=7.2-fpm
 VDK_PHP72_IMAGE_PATH=./../images/php72
+VDK_PHP72_PORT=127.0.0.1:9072
 
 #
 # DB
