--- a/docker/compose/nginx.yml
+++ b/docker/compose/nginx.yml
@@ -1,10 +1,5 @@
 version: "3.5"
 
-networks:
-    default:
-        name: ${VDK_NETWORK_NAME}
-        external: true
-
 services:
     nginx:
         image: ${VDK_NGINX_IMAGE_NAME}
@@ -16,8 +11,8 @@ services:
         ports:
             - ${VDK_NGINX_PORT}:80
         network_mode: host
-        networks:
-            - default
+        #networks:
+        #    - default
         env_file:
             - ${VDK_DOCKER_HOST_PATH}/.env
         volumes:
